<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity"
    android:clickable="false">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:id="@+id/btn_login"
        android:layout_below="@+id/et_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/textColor"
        android:layout_alignEnd="@+id/et_password"
        android:background="@color/colorSentryAccent"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:background="@color/colorTextBox"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:hint="@string/prompt_username"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@+id/et_username"
        android:layout_alignParentStart="true"
        android:background="@color/colorTextBox"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:hint="@string/prompt_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_message"
        android:background="@color/colorBackground"
        android:textColor="@color/textColor"
        android:layout_below="@+id/btn_logout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_logout"
        android:id="@+id/btn_logout"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColor"
        android:background="@color/colorSentryAccent"
        android:layout_alignEnd="@+id/tv_message" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_sentry_logo"
        android:background="@drawable/sentry_logo_watching"
        android:layout_below="@+id/tv_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/tv_message"
        android:contentDescription="sentry_logo" />
</RelativeLayout>
